177: add the HttpURLConnection to fetch the get request to the provided url